sfSandBoxCode/force-app/main/default/objects/Asset_Usage_Reading__c/Asset_Usage_Reading__c.object-meta.xml
<CustomObject>
    <label>Asset Usage Reading</label>
    <nameField>
        <displayFormat>ASU-{000000}</displayFormat>
        <label>Asset Usage Reading Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Usage Readings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>