sfSandBoxCode/force-app/main/default/objects/Asset_Usage_Reading__c/fields/Current_Reading__c.field-meta.xml
<CustomField>
    <fullName>Current_Reading__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Reading</label>
    <type>Checkbox</type>
</CustomField>