sfSandBoxCode/force-app/main/default/objects/Asset_Usage_Reading__c/fields/Sanergy_Asset__c.field-meta.xml
<CustomField>
    <fullName>Sanergy_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sanergy Asset</label>
    <referenceTo>Sanergy_Asset__c</referenceTo>
    <relationshipLabel>Asset Usage Readings</relationshipLabel>
    <relationshipName>Asset_Usage_Readings</relationshipName>
    <type>Lookup</type>
</CustomField>