sfSandBoxCode/force-app/main/default/objects/Asset_Usage_Reading__c/fields/Units__c.field-meta.xml
<CustomField>
    <fullName>Units__c</fullName>
    <formula>TEXT(Sanergy_Asset__r.measurement_unit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Units</label>
    <type>Text</type>
</CustomField>